clean API for changing sample parent
